Changelog
=========

8.0-dev - (unreleased)
----------------------

7.9 - (2013-11-05)
------------------
* Bug fix: make sure computed Titles are bytestreams not unicode
  [tiberich #17364]

7.8 - (2013-10-04)
------------------
* Bug fix: fix doctests
  [tiberich]

7.7 - (2013-09-23)
------------------
* Bug fix: update portlet readiness style to fix for latest Jquery UI
  [tiberich #16767]
* Bug fix: use bytestreams as return values for Title in IMS content. By default
  Plone (Archetypes) stores fields values as unicode, but returns them as bytestreams
  encoded as utf-8 (or the field's specified encoding)
  [tiberich #16767]

7.6 - (2013-09-18)
------------------
* Bug fix: Fixed manage portlets page on Assessment, IndicatorFactSheet and
  Specification
  [tiberich #14593]
* Bug fix: more logic condition fixes on frequency of updates agg edit
  [tiberich #16754]

7.5 - (2013-09-17)
------------------
* Bug fix: fix logic condition in eea.indicators frequency of edit display
  [tiberich #16754]

7.4 - (2013-09-06)
------------------
* Change WIP: change frequency_of_updates to have multiple pairs of
  frequency years/time of year information
  [tiberich #14929]

7.3 - (2013-08-21)
------------------
* Bug fix: fix popup editing in aggregated edit view for Indicators and
  Assessments
  [tiberich #15969]

7.2 - (2013-08-19)
------------------
* Bug fix: get rid of Products.kupu dependencies, we use TinyMCE now.
  [tiberich]
* Bug fix: use new method of seting up TinyMCE, according to upstream
  API changes
  [tiberich #15645]

7.1 - (2013-08-09)
------------------
* Bug fix: corrected the temporal coverage formatting by re-use existing
  well working logic. Do not re-invent the wheel.
  [demarant #14871]
* Bug fix: corrected mapping of ESMS DATA_DESCR.
  [demarant #14871]
* Bug fix: improved esms xml unicode handling for certain cases like typology metadata.
  [demarant #14871]
* Feature: added @@esms.xml view for assessments to export information