@@ -14,12 +14,16 @@ from Products.DataGridField import DataGridField, DataGridWidget
 from Products.DataGridField.Column import Column
 from Products.DataGridField.SelectColumn import SelectColumn
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
+
 from eea.indicators.content import interfaces
 from eea.indicators.content.IndicatorMixin import IndicatorMixin
 from eea.indicators.content.base import ModalFieldEditableAware
 from eea.indicators.content.utils import get_dgf_value
 from eea.relations.field import EEAReferenceField
 from eea.relations.widget import EEAReferenceBrowserWidget
+
+from eea.dataservice.interfaces import ITemporalCoverageAdapter
+
 from eea.workflow.interfaces import IHasMandatoryWorkflowFields
 from zope.interface import implements
 
@@ -235,10 +239,11 @@ class IndicatorFactSheet(ATFolder, ModalFieldEditableAware,
         wftool = getToolByName(self, 'portal_workflow')
 
         for ob in self.getRelatedItems():
-            if ob.portal_type == 'EEAFigure':
+            if ob.portal_type in ('EEAFigure', 'DavizVisualization'):
                 state = wftool.getInfoFor(ob, 'review_state', '(Unknown)')
                 if state in ['published', 'visible']:
-                    for val in ob.getTemporalCoverage():
+                    temporal_coverage = ITemporalCoverageAdapter(ob).value()
+                    for val in temporal_coverage:
                         result[val] = val
         return list(result.keys())
 
